@@ -2,6 +2,7 @@
 	- winrc/README.txt dos-format text file.
 	- iana portlist updated.
 	- use _beginthreadex() when available (performs stack alignment).
+	- defaults for windows baked into configure.ac (used if on mingw).
 
 18 March 2009: Wouter
 	- Added tests, unknown algorithms become insecure. fallback works.
